[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
description = "Todo.txt file format parser"
keywords = ["todo", "todotxt", "parser"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kstep/todotxt.rs"
readme = "README.md"
name = "todotxt"
version = "0.3.0"

[dependencies]
chrono = "0.2.21"
